objects/Deal_Support_Request__c/Deal_Support_Request__c.object-meta.xml
<CustomObject>
    <label>Deal Support Request</label>
    <nameField>
        <displayFormat>DSR-{00000}</displayFormat>
        <label>Deal Support Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Deal Support Requests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>