objects/Deal_Support_Request__c/fields/Additional_Customers_Attending_Title__c.field-meta.xml
<CustomField>
    <fullName>Additional_Customers_Attending_Title__c</fullName>
    <inlineHelpText>Enter any additional Contacts with the Contact&apos;s title.</inlineHelpText>
    <label>Additional Customers Attending (Title)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>