objects/Deal_Support_Request__c/fields/Additional_Information__c.field-meta.xml
<CustomField>
    <fullName>Additional_Information__c</fullName>
    <label>Is There Anything Else We Should Know?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>