objects/Deal_Support_Request__c/fields/Assigned_to__c.field-meta.xml
<CustomField>
    <fullName>Assigned_to__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Deal_Support_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>