objects/Deal_Support_Request__c/fields/AVP__c.field-meta.xml
<CustomField>
    <fullName>AVP__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Ref: Naveen Bhagvara. User will fill this if needed. No need to autofill.</description>
    <label>AVP</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Deal_Support_Requests9</relationshipName>
    <type>Lookup</type>
</CustomField>