objects/Deal_Support_Request__c/fields/Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Close_Date__c</fullName>
    <description>Added for DSR Comission RT
Updated by WFR: &quot;DSR Commission Update Close Date&quot;</description>
    <label>Close Date</label>
    <type>Date</type>
</CustomField>