objects/Deal_Support_Request__c/fields/Commission_Split_Notes__c.field-meta.xml
<CustomField>
    <fullName>Commission_Split_Notes__c</fullName>
    <label>Commission Split Notes</label>
    <type>TextArea</type>
</CustomField>