objects/Deal_Support_Request__c/fields/Customer_Engagement_Hours__c.field-meta.xml
<CustomField>
    <fullName>Customer_Engagement_Hours__c</fullName>
    <label>Customer Engagement Hours</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>