objects/Deal_Support_Request__c/fields/Customer_has_budget_for_Tanium__c.field-meta.xml
<CustomField>
    <fullName>Customer_has_budget_for_Tanium__c</fullName>
    <label>Customer has budget for Tanium?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>