objects/Deal_Support_Request__c/fields/Customer_Overview__c.field-meta.xml
<CustomField>
    <fullName>Customer_Overview__c</fullName>
    <label>Customer Overview</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>