objects/Deal_Support_Request__c/fields/Customer_Owns_Splunk_Already__c.field-meta.xml
<CustomField>
    <fullName>Customer_Owns_Splunk_Already__c</fullName>
    <label>Customer Owns Splunk Already?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>