objects/Deal_Support_Request__c/fields/Cyber_Risk_Profile__c.field-meta.xml
<CustomField>
    <fullName>Cyber_Risk_Profile__c</fullName>
    <description>Cyber Risk Profile</description>
    <inlineHelpText>Cyber Risk Profile</inlineHelpText>
    <label>Cyber Risk Profile</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>