objects/Deal_Support_Request__c/fields/Date_DSR_Submitted__c.field-meta.xml
<CustomField>
    <fullName>Date_DSR_Submitted__c</fullName>
    <description>This field will be updated by Approval Process DSR Commissions Approval 
This field will be used to count Days Opened
Not on page layout</description>
    <label>Date DSR Submitted</label>
    <type>Date</type>
</CustomField>