objects/Deal_Support_Request__c/fields/Deliverables_requested__c.field-meta.xml
<CustomField>
    <fullName>Deliverables_requested__c</fullName>
    <label>Deliverables requested</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ROI Intro Brief</fullName>
            </value>
            <value>
                <fullName>ROI model</fullName>
            </value>
            <value>
                <fullName>Case Studies</fullName>
            </value>
            <value>
                <fullName>Executive Brief</fullName>
            </value>
            <value>
                <fullName>Preliminary ROI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>