objects/Deal_Support_Request__c/fields/Department_Driving_Deal__c.field-meta.xml
<CustomField>
    <fullName>Department_Driving_Deal__c</fullName>
    <label>Department Driving Deal</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>IT Ops</fullName>
            </value>
            <value>
                <fullName>Security</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>