objects/Deal_Support_Request__c/fields/Describe_POC_environment__c.field-meta.xml
<CustomField>
    <fullName>Describe_POC_environment__c</fullName>
    <inlineHelpText>Please attach any relevant POC documents</inlineHelpText>
    <label>Describe POC environment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>