objects/Deal_Support_Request__c/fields/Expected_Date__c.field-meta.xml
<CustomField>
    <fullName>Expected_Date__c</fullName>
    <label>Expected Meeting/Demo Date</label>
    <type>Date</type>
</CustomField>