objects/Deal_Support_Request__c/fields/First_Insight_data_available__c.field-meta.xml
<CustomField>
    <fullName>First_Insight_data_available__c</fullName>
    <description>First Insight data available? Yes/No
- If yes, please attach results</description>
    <inlineHelpText>First Insight data available? Yes/No
- If yes, please attach results</inlineHelpText>
    <label>First Insight or T-HAT data available??</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>