objects/Deal_Support_Request__c/fields/Future_Point_Solutions__c.field-meta.xml
<CustomField>
    <fullName>Future_Point_Solutions__c</fullName>
    <description>What point solutions are being considered by Customer for future purchase?</description>
    <inlineHelpText>What point solutions are being considered by Customer for future purchase?</inlineHelpText>
    <label>Future Point Solutions</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>