objects/Deal_Support_Request__c/fields/How_Does_Customer_Use_Splunk__c.field-meta.xml
<CustomField>
    <fullName>How_Does_Customer_Use_Splunk__c</fullName>
    <label>How Does Customer Use Splunk?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>