objects/Deal_Support_Request__c/fields/How_many_endpoints__c.field-meta.xml
<CustomField>
    <fullName>How_many_endpoints__c</fullName>
    <label>Laptop/Desktop quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>