objects/Deal_Support_Request__c/fields/How_many_Servers_for_ROI__c.field-meta.xml
<CustomField>
    <fullName>How_many_Servers_for_ROI__c</fullName>
    <label>Server quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>