objects/Deal_Support_Request__c/fields/Internal_Hours_Spent__c.field-meta.xml
<CustomField>
    <fullName>Internal_Hours_Spent__c</fullName>
    <label>Internal Hours Spent</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>