objects/Deal_Support_Request__c/fields/Last_Tanium_Demo__c.field-meta.xml
<CustomField>
    <fullName>Last_Tanium_Demo__c</fullName>
    <label>Last Tanium Demo?</label>
    <type>Date</type>
</CustomField>