objects/Deal_Support_Request__c/fields/Number_of_Employees__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Employees__c</fullName>
    <description>Number of Employees</description>
    <inlineHelpText>Number of Employees</inlineHelpText>
    <label>Number of Employees</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>