objects/Deal_Support_Request__c/fields/Number_of_Hours_Requested__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Hours_Requested__c</fullName>
    <label>Number of Hours Requested</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>