objects/Deal_Support_Request__c/fields/Opportunity_Owner_s_Manager__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Owner_s_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity Owner&apos;s Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Deal_Support_Requests8</relationshipName>
    <type>Lookup</type>
</CustomField>