objects/Deal_Support_Request__c/fields/Opportunity_Quote_Amount__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Quote_Amount__c</fullName>
    <description>Ref: Naveen Bhargava. Updated to Amount</description>
    <formula>Opportunity__r.Amount</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TCV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>