objects/Deal_Support_Request__c/fields/Other_Deliverables_Requested__c.field-meta.xml
<CustomField>
    <fullName>Other_Deliverables_Requested__c</fullName>
    <description>This field is mandatory if &quot;Deliverables_Requested_2&quot; field&apos;s value is Other
Made required by a Validation Rule &quot;Other_Deliverables_Requested&quot;.</description>
    <label>Other Deliverables Requested</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>