objects/Deal_Support_Request__c/fields/POC_completed__c.field-meta.xml
<CustomField>
    <fullName>POC_completed__c</fullName>
    <label>POC completed?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>In Process</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>