objects/Deal_Support_Request__c/fields/Point_Solution_displacement_targets__c.field-meta.xml
<CustomField>
    <fullName>Point_Solution_displacement_targets__c</fullName>
    <label>Point Solution displacement targets</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>