objects/Deal_Support_Request__c/fields/Point_Solutions__c.field-meta.xml
<CustomField>
    <fullName>Point_Solutions__c</fullName>
    <description>What point solutions does Customer currently have deployed? And which are potential targets for displacement?</description>
    <label>Point Solutions Currently deployed</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>