objects/Deal_Support_Request__c/fields/Primary_Use_Cases_Why_Tanium__c.field-meta.xml
<CustomField>
    <fullName>Primary_Use_Cases_Why_Tanium__c</fullName>
    <label>Primary Use Cases/Why Tanium?</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>