objects/Deal_Support_Request__c/fields/ROI_Exception_Justification__c.field-meta.xml
<CustomField>
    <fullName>ROI_Exception_Justification__c</fullName>
    <label>ROI Exception Justification</label>
    <type>TextArea</type>
</CustomField>