objects/Deal_Support_Request__c/fields/ROI_Exception_Reason__c.field-meta.xml
<CustomField>
    <fullName>ROI_Exception_Reason__c</fullName>
    <label>ROI Exception Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Current customer (ROI already completed)</fullName>
            </value>
            <value>
                <fullName>Compelling event, no time prior to purchase</fullName>
            </value>
            <value>
                <fullName>Customer unwilling to participate</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>