objects/Deal_Support_Request__c/fields/ROI_Notes__c.field-meta.xml
<CustomField>
    <fullName>ROI_Notes__c</fullName>
    <label>ROI Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>