objects/Deal_Support_Request__c/fields/ROI_Value__c.field-meta.xml
<CustomField>
    <fullName>ROI_Value__c</fullName>
    <label>ROI Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>