objects/Deal_Support_Request__c/fields/RVP_1_Name__c.field-meta.xml
<CustomField>
    <fullName>RVP_1_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>RVP 1 Name</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Deal_Support_Requests_RVP1</relationshipName>
    <type>Lookup</type>
</CustomField>