objects/Deal_Support_Request__c/fields/RVP_1_percent__c.field-meta.xml
<CustomField>
    <fullName>RVP_1_percent__c</fullName>
    <label>RVP 1 %</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>