objects/Deal_Support_Request__c/fields/RVP_3__c.field-meta.xml
<CustomField>
    <fullName>RVP_3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>RVP 3 Name</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Deal_Support_Requests7</relationshipName>
    <type>Lookup</type>
</CustomField>