objects/Deal_Support_Request__c/fields/RVP_3_per__c.field-meta.xml
<CustomField>
    <fullName>RVP_3_per__c</fullName>
    <label>RVP 3 %</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>