objects/Deal_Support_Request__c/fields/RVP_approved_ROI_study__c.field-meta.xml
<CustomField>
    <fullName>RVP_approved_ROI_study__c</fullName>
    <label>RVP approved ROI study</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>