objects/Deal_Support_Request__c/fields/Sales_Rep_1__c.field-meta.xml
<CustomField>
    <fullName>Sales_Rep_1__c</fullName>
    <label>Opportunity Owner %</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>