objects/Deal_Support_Request__c/fields/Sales_Rep_2__c.field-meta.xml
<CustomField>
    <fullName>Sales_Rep_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Rep 2</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Deal_Support_Requests1</relationshipName>
    <type>Lookup</type>
</CustomField>