objects/Deal_Support_Request__c/fields/Sales_Rep_3__c.field-meta.xml
<CustomField>
    <fullName>Sales_Rep_3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Rep 3</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Deal_Support_Requests3</relationshipName>
    <type>Lookup</type>
</CustomField>