objects/Deal_Support_Request__c/fields/Sales_Rep_3_per__c.field-meta.xml
<CustomField>
    <fullName>Sales_Rep_3_per__c</fullName>
    <label>Sales Rep 3 %</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>