objects/Deal_Support_Request__c/fields/Subject__c.field-meta.xml
<CustomField>
    <fullName>Subject__c</fullName>
    <description>Field created for Deal Support Request Commission Record Type</description>
    <label>Subject</label>
    <length>150</length>
    <type>Text</type>
</CustomField>