objects/Deal_Support_Request__c/fields/Support_Request_Notes__c.field-meta.xml
<CustomField>
    <fullName>Support_Request_Notes__c</fullName>
    <label>Support Request Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>