objects/Deal_Support_Request__c/fields/TAM_Demo_Completed__c.field-meta.xml
<CustomField>
    <fullName>TAM_Demo_Completed__c</fullName>
    <label>TAM Demo Completed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>