objects/Deal_Support_Request__c/fields/Tanium_Goal__c.field-meta.xml
<CustomField>
    <fullName>Tanium_Goal__c</fullName>
    <label>Tanium Goal For This Meeting/Demo</label>
    <type>TextArea</type>
</CustomField>