objects/Deal_Support_Request__c/fields/VP_1__c.field-meta.xml
<CustomField>
    <fullName>VP_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>VP 1</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Deal_Support_Requests4</relationshipName>
    <type>Lookup</type>
</CustomField>