objects/Deal_Support_Request__c/fields/VP_2__c.field-meta.xml
<CustomField>
    <fullName>VP_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>VP 2</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Deal_Support_Requests5</relationshipName>
    <type>Lookup</type>
</CustomField>