objects/Deal_Support_Request__c/fields/VP_2_per__c.field-meta.xml
<CustomField>
    <fullName>VP_2_per__c</fullName>
    <label>VP 2 %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>