objects/Deal_Support_Request__c/fields/VP_3__c.field-meta.xml
<CustomField>
    <fullName>VP_3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>VP 3</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Deal_Support_Requests6</relationshipName>
    <type>Lookup</type>
</CustomField>