objects/Deal_Support_Request__c/fields/VP_3_per__c.field-meta.xml
<CustomField>
    <fullName>VP_3_per__c</fullName>
    <label>VP 3 %</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>