objects/Deal_Support_Request__c/fields/VP__c.field-meta.xml
<CustomField>
    <fullName>VP__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Ref: Naveen Bhargava for Commission DSR</description>
    <label>VP</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Deal_Support_RequestsuYM9</relationshipName>
    <type>Lookup</type>
</CustomField>