objects/Deal_Support_Request__c/fields/Who_initiated_ROI_Request__c.field-meta.xml
<CustomField>
    <fullName>Who_initiated_ROI_Request__c</fullName>
    <label>Who initiated ROI Request</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer</fullName>
            </value>
            <value>
                <fullName>Tanium</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>