objects/Deal_Support_Request__c/fields/Why_Do_You_Need_Information_Security__c.field-meta.xml
<CustomField>
    <fullName>Why_Do_You_Need_Information_Security__c</fullName>
    <label>Why Do You Need Information Security?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>