objects/Deal_Support_Request__c/fields/Will_Tanium_champion_s_collaborate_on_R__c.field-meta.xml
<CustomField>
    <fullName>Will_Tanium_champion_s_collaborate_on_R__c</fullName>
    <label>Will champion(s) collaborate on ROI</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>