objects/Deal_Support_Request__c/recordTypes/Commission.recordType-meta.xml
<RecordType>
    <fullName>Commission</fullName>
    <active>true</active>
    <description>Commission</description>
    <label>Commission</label>
</RecordType>