objects/Deal_Support_Request__c/recordTypes/ROI.recordType-meta.xml
<RecordType>
    <fullName>ROI</fullName>
    <active>true</active>
    <description>“DO NOT USE.  Open an ISR for Value Engineering instead”.</description>
    <label>ROI Request</label>
</RecordType>