objects/Deal_Support_Request__c/recordTypes/ROI_Exception.recordType-meta.xml
<RecordType>
    <fullName>ROI_Exception</fullName>
    <active>true</active>
    <label>ROI Exception</label>
</RecordType>