objects/Deal_Support_Request__c/recordTypes/Security.recordType-meta.xml
<RecordType>
    <fullName>Security</fullName>
    <active>true</active>
    <label>Security</label>
</RecordType>