objects/Deal_Support_Request__c/validationRules/Other_Deliverables_Requested.validationRule-meta.xml
<ValidationRule>
    <fullName>Other_Deliverables_Requested</fullName>
    <active>true</active>
    <description>If &quot;Other&quot; value is selected in Deliverables_Requested_2, User has to fill out &quot;Other Deliverables Requested&quot;
Case: https://tanium.lightning.force.com/lightning/r/Case/5000e00001kKyR8AAK/view</description>
    <errorConditionFormula>AND(TEXT(Deliverables_Requested_2__c) = &quot;Other&quot;,
ISBLANK(Other_Deliverables_Requested__c))</errorConditionFormula>
    <errorMessage>Please fill in Other Deliverables Requested</errorMessage>
</ValidationRule>