objects/Deal_Support_Request__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Account_Owner__c</columns>
    <columns>Assigned_to__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Opportunity_Stage__c</columns>
    <columns>Opportunity_Amount__c</columns>
    <columns>Customer_Contact__c</columns>
    <columns>Department_Driving_Deal__c</columns>
    <columns>Type__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>