objects/Deal_Support_Request__c/listViews/Commissions_Queue.listView-meta.xml
<ListView>
    <fullName>Commissions_Queue</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Account_Name__c</columns>
    <columns>Opportunity__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Assigned_to__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Deal_Support_Request__c.Commission</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Closed</value>
    </filters>
    <label>Commissions Queue</label>
    <sharedTo>
        <group>Comissions</group>
    </sharedTo>
</ListView>