objects/Deal_Support_Request__c/listViews/ROI_Request_DSR.listView-meta.xml
<ListView>
    <fullName>ROI_Request_DSR</fullName>
    <columns>NAME</columns>
    <columns>Days_Opened__c</columns>
    <columns>Status__c</columns>
    <columns>Account_Name__c</columns>
    <columns>Opportunity__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Assigned_to__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Deal_Support_Request__c.ROI</value>
    </filters>
    <label>ROI Request DSR</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>